--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
     "gh-pages": "^4.0.0",
+    "moment": "^2.29.4",
     "vite": "^4.0.0"
   }
 }
